--- a/.html
+++ b/.html
@@ -3,19 +3,20 @@
 <body>
 <h2>HTML Forms</h2>
 <form action="/action_page.php">
-        <label for="fname">First name:</label> <br> <br> 
+        <label for="fname">First name:</label> <br>  
         <input type="text" id="fname" name="fname" value=" "> <br> <br>
-        <label for="lname">Last name:</label> <br> <br>
+        <label for="lname">Last name:</label> <br> 
         <input type="text" id="lname" name="lname" value=" "> <br> <br>
+        <label for="gender">Gender:</label> <br>  
         <input type="radio" id="male" name="gender" value="Male">
-        <label for="male">Male</label> <br> <br>
+        <label for="male">Male</label> <br> 
         <input type="radio" id="female" name="gender" value="Female">
         <label for="female">Female</label> <br> <br>
-        <label for="email">Enter your email:</label> <br> <br>
+        <label for="email">Enter your email:</label> <br> 
         <input type="email" id="email" name="email"/> <br> <br>
-        <label for="pwd">Password:</label> <br> <br>
+        <label for="pwd">Password:</label> <br> 
         <input type="password" id="pwd" name="pwd"> <br> <br>
-        <label for="reppwd">Repeat Password</label> <br> <br>
+        <label for="reppwd">Repeat Password:</label> <br>
         <input type="password" id="pwd" name="pwd"> <br> <br>
         <input type="submit" value="Submit"> <br> <br>
         <input type="reset" value="Reset"> <br> <br>
